--- a/odoo_modules/my_module2/views/my_model_views.xml
+++ b/odoo_modules/my_module2/views/my_model_views.xml
@@ -1,12 +1,14 @@
 <odoo>
   <data>
-    <record model="ir.ui.view" id="crm_lead_view_form">
+    <record model="ir.ui.view" id="crm_lead_view_form_date_de_fermeture">
       <field name="name">crm.lead.form.date_de_fermeture</field>
       <field name="model">crm.lead</field>
       <field name="inherit_id" ref="crm.crm_lead_view_form"/>
       <field name="arch" type="xml">
-        <xpath expr="//field[@name='mobile']" position="after">
-          <field name="date_fermeture"/>
+        <xpath expr="//group[@name='mobile']" position="after">
+            <group>
+                <field name="date_fermeture"/>
+            </group>
         </xpath>
       </field>
     </record>
